fix: signing keys

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -41,6 +41,7 @@ stages:
       serviceConnection: $(devServiceConnection)
       subscriptionId: $(devSubscriptionId)
       clientId: $(devAzureB2cTenantId)
+      clientSigningKey: $(devClientSigningKey)
       graphAccessClientId: $(devGraphAccessClientId)
       graphAccessClientSecret: $(devGraphAccessClientSecret)
       deploymentPrimaryLocation: $(deploymentPrimaryLocation)
@@ -60,6 +61,7 @@ stages:
       serviceConnection: $(testServiceConnection)
       subscriptionId: $(testSubscriptionId)
       clientId: $(testAzureB2cTenantId)
+      clientSigningKey: $(testClientSigningKey)
       graphAccessClientId: $(testGraphAccessClientId)
       graphAccessClientSecret: $(testGraphAccessClientSecret)
       deploymentPrimaryLocation: $(deploymentPrimaryLocation)
