--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -9,6 +9,8 @@ parameters:
   type: string
 - name: clientId
   type: string
+- name: clientSigningKey
+  type: string
 - name: graphAccessClientId
   type: string
 - name: graphAccessClientSecret
