fix: unused params

--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -49,6 +49,7 @@ jobs:
       -secondaryStorageLocation "${{parameters.deploymentSecondaryLocation}}"
       -alertWebHookUrl "http://www.test.com"
       -B2CTenant "${{parameters.environmentName}}authncs"
+      -B2CTenantFullName "${{parameters.environmentName}}authncs.onmicrosoft.com"
       -B2CSignUpPolicy "$(b2cSignUpPolicy)"
       -B2CSignupConfirmPolicy "$(b2cSignupConfirmPolicy)"
       -B2CPasswordResetConfirmPolicy "$(b2cPasswordResetConfirmPoicy)"
