fix: rg names the right way around

--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -42,7 +42,7 @@ jobs:
       environmentName: ${{parameters.environmentName}}
       serviceConnection: ${{parameters.serviceConnection}}
       subscriptionId: ${{parameters.subscriptionId}}
-      resourceGroupName: s141${{parameters.environmentId}}-${{parameters.environmentName}}$(applicationName)
+      resourceGroupName: s141${{parameters.environmentId}}-${{parameters.applicationName}}${{parameters.environmentName}}
       location: ${{parameters.deploymentPrimaryLocation}}
       templatePath: '$(Build.SourcesDirectory)/arm/template.json'
       overrideParameters: '
