--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -11,7 +11,13 @@ parameters:
   type: string
 - name: proxyAppRegistrationObjectId
   type: string
+- name: identAppRegistrationClientId
+  type: string
+- name: signinRedirectRoot
+  type: string
 - name: eapimRootUrl
+  type: string
+
   
 jobs:
 - job: tenantSetup
@@ -19,12 +25,16 @@ jobs:
   pool:
     vmImage: windows-latest
   variables:
-    environmentName: ${{parameters.environmentName}}
+    #Uploader identity
     tenantId: ${{parameters.tenantId}}
     uploaderPrincipalClientId: ${{parameters.uploaderPrincipalClientId}}
     uploaderPrincipalSecret:  ${{parameters.uploaderPrincipalSecret}}
+    #interpolation - these are used by the interpolation step to customise the policies per environment
+    environmentName: ${{parameters.environmentName}}
     proxyAppRegistrationClientId: ${{parameters.proxyAppRegistrationClientId}}
     proxyAppRegistrationObjectId: ${{parameters.proxyAppRegistrationObjectId}}
+    identAppRegistrationClientId: ${{parameters.identAppRegistrationClientId}}
+    signinRedirectRoot: ${{parameters.signinRedirectRoot}}
     eapimRootUrl: ${{parameters.eapimRootUrl}}
   steps:
     - task: Tokenization@2
@@ -36,48 +46,56 @@ jobs:
         TokenStart: '__'
         TokenEnd: '__'
     - pwsh: |
-        $scriptPath = "$($env:BUILD_SOURCESDIRECTORY)\scripts\UploadFrameworkPolicy.ps1"
-        Write-Host "Using Path : $($scriptPath)"
+        $scriptPath = $env:BUILD_SOURCESDIRECTORY\scripts\UploadFrameworkPolicy.ps1
+        Write-Host Using Path : $scriptPath
 
-        Write-Host "UPLOADERPRINCIPALCLIENTID : $($env:UPLOADERPRINCIPALCLIENTID)"
-        Write-Host "UPLOADERPRINCIPALSECRET : $($env:UPLOADERPRINCIPALSECRET)"
-        Write-Host "TENANTID : $($env:TENANTID)"
+        Write-Host UPLOADERPRINCIPALCLIENTID : $env:UPLOADERPRINCIPALCLIENTID
+        Write-Host UPLOADERPRINCIPALSECRET : $env:UPLOADERPRINCIPALSECRET
+        Write-Host TENANTID : $env:TENANTID
 
+        //Ex
         $policyId = "B2C_1A_TrustFrameworkBase_Invitation"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\TrustFrameworkBase_Invitation.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
 
-        $policyId = "B2C_1A_TrustFrameworkExtensions_Invitation"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\TrustFrameworkBase_Invitation.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        Write-Host EXAMPLE POLICY FILE PATH $env:BUILD_SOURCESDIRECTORY\policy\TrustFrameworkBase_Invitation.xml
+        Write-Host EXAMPLE POLICY ID : $policyId
 
-        $policyId = "B2C_1A_Account_Signup"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\Account_Signup.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        Write-Host EXAMPLE INVOCKATION $scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile
 
-        $policyId = "B2C_1A_Find_Email"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\Find_Email.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        # $policyId = "B2C_1A_TrustFrameworkBase_Invitation"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\TrustFrameworkBase_Invitation.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
 
-        $policyId = "B2C_1A_Password_Reset_Conformation"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\Password_Reset_Confirmation.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        # $policyId = "B2C_1A_TrustFrameworkExtensions_Invitation"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\TrustFrameworkBase_Invitation.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
 
-        $policyId = "B2C_1A_Password_Reset"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\Password_Reset.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        # $policyId = "B2C_1A_Account_Signup"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Account_Signup.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
 
-        $policyId = "B2C_1A_Signin_Invitation"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\Signin_Invitation.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        # $policyId = "B2C_1A_Find_Email"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Find_Email.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
 
-        $policyId = "B2C_1A_Signup_Confirmation"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\Signup_Confirmation.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        # $policyId = "B2C_1A_Password_Reset_Conformation"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Password_Reset_Confirmation.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
 
-        $policyId = "B2C_1A_Signup_Invitation"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\test\Signup_Invitation.xml"
-        Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+        # $policyId = "B2C_1A_Password_Reset"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Password_Reset.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+
+        # $policyId = "B2C_1A_Signin_Invitation"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Signin_Invitation.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+
+        # $policyId = "B2C_1A_Signup_Confirmation"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Signup_Confirmation.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
+
+        # $policyId = "B2C_1A_Signup_Invitation"
+        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Signup_Invitation.xml
+        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADERPRINCIPALSECRET $env:TENANTID $policyId $policyFile"
 
         Write-Host 'Upload Complete'
 
