--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -21,13 +21,13 @@ variables:
 
 stages:
 
-- stage: build
-  displayName: Build
-  jobs:
-  - template: /Application/dotnet/jobs/build-application.yml@devopsTemplates
-    parameters:
-      applicationName: $(applicationName)
-      webPublish: false
+# - stage: build
+#   displayName: Build
+#   jobs:
+#   - template: /Application/dotnet/jobs/build-application.yml@devopsTemplates
+#     parameters:
+#       applicationName: $(applicationName)
+#       webPublish: false
 
 - stage: testTenantSetup
   displayName: Tenant Setup - TEST
