--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -7,6 +7,7 @@ parameters:
   type: string
 - name: uploaderPrincipalSecret
   type: string
+  secret: true
 - name: proxyAppRegistrationClientId
   type: string
 - name: proxyAppRegistrationObjectId
