--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -52,37 +52,37 @@ jobs:
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\TrustFrameworkBase_Invitation.xml"
         Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_TrustFrameworkExtensions_Invitation"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\TrustFrameworkBase_Invitation.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_TrustFrameworkExtensions_Invitation"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\TrustFrameworkBase_Invitation.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Account_Signup"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Account_Signup.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_Account_Signup"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Account_Signup.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"e"
 
-        # $policyId = "B2C_1A_Find_Email"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Find_Email.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_Find_Email"
+        policyFile = "$($env:BUILD_SOURCESDIRECTORY)policy\Find_Email.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Password_Reset_Conformation"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Password_Reset_Confirmation.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_Password_Reset_Conformation"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Password_Reset_Confirmation.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Password_Reset"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Password_Reset.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_Password_Reset"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Password_Reset.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Signin_Invitation"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Signin_Invitation.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_Signin_Invitation"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Signin_Invitation.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Signup_Confirmation"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Signup_Confirmation.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_Signup_Confirmation"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Signup_Confirmation.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Signup_Invitation"
-        # $policyFile = $env:BUILD_SOURCESDIRECTORY\policy\Signup_Invitation.xml
-        # Invoke-Expression "$scriptPath $env:UPLOADERPRINCIPALCLIENTID $env:UPLOADER_PRINCIPAL_SECRET $env:TENANT_ID $policyId $policyFile"
+        $policyId = "B2C_1A_Signup_Invitation"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Signup_Invitation.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         Write-Host 'Upload Complete'
       env:
