--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -56,9 +56,13 @@ jobs:
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\TrustFrameworkExtensions_Invitation.xml"
         Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Account_Signup"
-        # $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Account_Signup.xml"
-        # Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        $policyId = "B2C_1A_Account_Signup"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Account_Signup.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+
+        $policyId = "B2C_1A_Change_Email"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Change_Email.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         # $policyId = "B2C_1A_Find_Email"
         # policyFile = "$($env:BUILD_SOURCESDIRECTORY)policy\Find_Email.xml"
