--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -64,13 +64,13 @@ jobs:
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Change_Email.xml"
         Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Find_Email"
-        # policyFile = "$($env:BUILD_SOURCESDIRECTORY)policy\Find_Email.xml"
-        # Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        $policyId = "B2C_1A_Find_Email"
+        policyFile = "$($env:BUILD_SOURCESDIRECTORY)policy\Find_Email.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        # $policyId = "B2C_1A_Password_Reset_Conformation"
-        # $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Password_Reset_Confirmation.xml"
-        # Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        $policyId = "B2C_1A_Password_Reset_Conformation"
+        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Password_Reset_Confirmation.xml"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         # $policyId = "B2C_1A_Password_Reset"
         # $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\Password_Reset.xml"
