--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -22,13 +22,13 @@ variables:
 
 stages:
 
-# - stage: build
-#   displayName: Build
-#   jobs:
-#   - template: /Application/dotnet/jobs/build-application.yml@devopsTemplates
-#     parameters:
-#       applicationName: $(applicationName)
-#       webPublish: false
+- stage: build
+  displayName: Build
+  jobs:
+  - template: /Application/dotnet/jobs/build-application.yml@devopsTemplates
+    parameters:
+      applicationName: $(applicationName)
+      webPublish: false
 
 - stage: testTenantSetup
   displayName: Tenant Setup - TEST
@@ -63,21 +63,24 @@ stages:
 #       deployApim: true
 #       eapimEnvironmentName: 'Test'
 
-# - stage: deployTest
-#   displayName: Deploy - TEST
-#   jobs:
-#   - template: yaml/jobs/deploy.yml
-#     parameters:
-#       applicationName: $(applicationName)
-#       environmentName: 'test'
-#       environmentId: 't01'
-#       serviceConnection: $(testServiceConnection)
-#       subscriptionId: $(testSubscriptionId)
-#       clientId: $(testAzureB2cTenantId)
-#       clientSigningKey: $(testClientSigningKey)
-#       graphAccessClientId: $(testGraphAccessClientId)
-#       graphAccessClientSecret: $(testGraphAccessClientSecret)
-#       deploymentPrimaryLocation: $(deploymentPrimaryLocation)
-#       deploymentSecondaryLocation: $(deploymentSecondaryLocation)
-#       deployApim: true
-#       eapimEnvironmentName: 'Test'
+- stage: deployTest
+  displayName: Deploy - TEST
+  dependsOn:
+  - build
+  - testTenantSetup
+  jobs:
+  - template: yaml/jobs/deploy.yml
+    parameters:
+      applicationName: $(applicationName)
+      environmentName: 'test'
+      environmentId: 't01'
+      serviceConnection: $(testServiceConnection)
+      subscriptionId: $(testSubscriptionId)
+      clientId: $(testAzureB2cTenantId)
+      clientSigningKey: $(testClientSigningKey)
+      graphAccessClientId: $(testGraphAccessClientId)
+      graphAccessClientSecret: $(testGraphAccessClientSecret)
+      deploymentPrimaryLocation: $(deploymentPrimaryLocation)
+      deploymentSecondaryLocation: $(deploymentSecondaryLocation)
+      deployApim: true
+      eapimEnvironmentName: 'Test'
