fix: applicationName passed to interpolation

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -35,6 +35,7 @@ stages:
   jobs:
   - template: yaml/jobs/tenant-setup.yml
     parameters:
+      applicationName: $(applicationName)
       environmentName: test
       tenantId: $(testAzureB2cTenantId)
       uploaderPrincipalClientId: $(testPipelineMangementClientId)
