--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -7,6 +7,8 @@ parameters:
   type: string
 - name: serviceConnection
   type: string
+- name: eapimServiceConnection
+  type: string
 - name: subscriptionId
   type: string
 - name: clientId
@@ -24,9 +26,6 @@ parameters:
   type: string
 - name: deploymentSecondaryLocation
   type: string
-- name: deployApim
-  type: boolean
-  default: false
 - name: eapimEnvironmentName
   type: string
   values:
@@ -34,20 +33,15 @@ parameters:
   - Test
   - Oat
   - Production
-- name: eapimNamedValuesFileName
-  type: string
 
 jobs:
-- template: /Application/dotnet/jobs/deploy-function.yml@devopsTemplates
-  parameters:
-      applicationName: ${{parameters.applicationName}}
-      environmentName: ${{parameters.environmentName}}
-      serviceConnection: ${{parameters.serviceConnection}}
-      subscriptionId: ${{parameters.subscriptionId}}
-      resourceGroupName: s141${{parameters.environmentId}}-${{parameters.environmentName}}${{parameters.applicationName}}
-      location: ${{parameters.deploymentPrimaryLocation}}
-      templatePath: '$(Build.SourcesDirectory)/arm/template.json'
-      overrideParameters: '
+- deployment: Deploy
+  displayName: Deploy Azure Function
+  environment: ${{parameters.environmentName}}
+  pool:
+    vmImage: ${{parameters.agentImage}}
+  variables:
+    overrideParameters: '
       -applicationName "$(applicationName)"
       -environmentName "${{parameters.environmentName}}"
       -servicePlanSkuName "$(functionServicePlanSkuName)"
@@ -86,16 +80,73 @@ jobs:
       -EmailChangeConfirmationEmailSubjectNewEmail "Email change request"
       -EmailChangeConfirmationEmailSubjectOldEmail "Email change request"
       -B2CChangeEmailPolicy "B2C_1A_changeemail"
-      -ExtensionAppId "${{parameters.extensionAppId}}"
-      '
-      eapimRegister: ${{parameters.deployApim}}
-      eapimServiceConnection: $(eapimServiceConnection)
-      eapimEnvironment: ${{parameters.eapimEnvironmentName}}
-      eapimProductName: 'NCS Identity'
-      eapimProductContactEmail: paul.sheridan@digital.education.gov.uk
-      eapimApiPublishedName: 'NCS Identity'
-      eapimApiOpenApiSchemaPath: '/swagger'
-      eapimApiPublishedPath: ncsauth
-      eapimApiXmlPolicyPath: '$(Build.SourcesDirectory)/eapim/api/policy.xml'
-      eapimNamedValuesIncluded: true
-      eapimNamedValuesFileName: ${{parameters.eapimNamedValuesFileName}}
+      -ExtensionAppId "${{parameters.extensionAppId}}"'
+  strategy:
+    runOnce:
+      deploy:
+        steps:
+        - template: /Infrastructure/steps/deploy-template.yml@devopsTemplates
+          parameters:
+            serviceConnection: ${{parameters.serviceConnection}}
+            subscriptionId: ${{parameters.subscriptionId}}
+            resourceGroupName: s141${{parameters.environmentId}}-${{parameters.environmentName}}${{parameters.applicationName}}
+            location: ${{parameters.deploymentPrimaryLocation}}
+            templateFilePath: '$(Build.SourcesDirectory)/arm/template.json'
+            armParameterOverrideString: $(overrideParameters)
+
+        - pwsh: |
+            Write-Host "##vso[task.setvariable variable=dsiB2cCertThumbprint;issecret=true]$dsiB2cCertThumbprint"
+            Write-Host "##vso[task.setvariable variable=dsiB2cFuncionKey;issecret=true]$dsiB2cFuncionKey"
+          displayName: Set Named values
+          env:
+            dsiB2cCertThumbprint: 'VAR_THUMBPRINT'
+            dsiB2cFuncionKey: 'VAR_FUCTIONKEY'
+
+        - task: Tokenization@2
+          displayName: Tokenise CSV Files
+          inputs:
+            SourcePath: '$(Build.SourcesDirectory)\eapim\namedValues'
+            TargetFileNames: '*.csv'
+            RequireVariable: true
+            TokenStart: '{{'
+            TokenEnd: '}}'
+
+        - task: AzureAppServiceManage@0
+          displayName: Install Site Extensions
+          inputs:
+            azureSubscription: ${{parameters.serviceConnection}}
+            Action: 'Install Extensions'
+            WebAppName: ${{parameters.applicationName}}-${{parameters.environmentName}}-function
+            ExtensionsList: 'Microsoft.VisualStudio.SnapshotDebugger.AzureAppServices.Standalone'
+
+        - template: /Application/dotnet/steps/deploy-function.yml@devopsTemplates
+          parameters:
+            azureSubscription: ${{parameters.serviceConnection}}
+            applicationName: ${{parameters.applicationName}}
+            environmentName: ${{parameters.environmentName}}
+
+        - pwsh : |
+            $url = "$($env:ARMOUTPUT_FUNCTIONURL)${{parameters.eapimApiOpenApiSchemaPath}}"
+            $filePath = "$($env:BUILD_SOURCESDIRECTORY)\definition.json"
+            Write-Host "url: $($url)"
+            Write-Host "filePath: $($filePath)"
+            Invoke-RestMethod -Method Get -Uri $url -ContentType "application/json" -OutFile $filePath -MaximumRetryCount 5 -RetryIntervalSec 10
+          name: getDefinition
+          displayName: Download OpenApi Definition
+
+        - template: /Application/dotnet/steps/import-function-eapim.yml@devopsTemplates
+          parameters:
+            serviceConnection: ${{parameters.serviceConnection}}
+            eapimServiceConnection: ${{parameters.eapimServiceConnection}}
+            functionName: $(armOutput.functionName)
+            functionKey: $(armOutput.functionDefaultKey)
+            functionUrl: $(armOutput.functionUrl)
+            productName: 'NCS Identity'
+            publishContactEmail: 'paul.sheridan@digital.education.gov.uk'
+            publishApiName: 'NCS Identity'
+            publishApiOpenApiSchemaPath: '$(Build.SourcesDirectory)\definition.json'
+            publishApiPath: ncsauth
+            publishApiXmlPolicyPath: '$(Build.SourcesDirectory)\eapim\api\policy.xml'
+            eapimEnvironment: ${{parameters.eapimEnvironmentName}}
+            namedValuesIncluded: true
+            namedValuesFileName: '$(Build.SourcesDirectory)\eapim\namedValues\values.csv'
